2004-06-15  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified filesystem objects so that they check for updates to .metadata
     files in debug mode.  A change in a .metadata file causes the file to
     be reloaded and reparsed.  The new methods are in FSControllerBase.py.

   * Added a check for a common action/validator bug:
     In IE, you can submit a form using the Return key.  The result is that no
     button is clicked.  If you specify actions for, say, success..Button1 and
     success..Button2, but the user submits the form using the Return key,
     you will get an exception because no next action is found.  The new check 
     makes sure that you specify a default next action in the event of no button
     pressed.

2004-03-12  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added some error handling to better deal with validators that don't return
     the state object.

   * Fixed the version number 

   * Released 1.0.1

2004-03-09  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Cleaned up the example code, fixed license info, released 1.0!

2004-03-05  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Got rid of some spurious warnings about "Unknown context type" when 
     installing new templates with .metadata specifying actions/validators for 
     all types.

2004-03-03  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fix default scripts

2004-03-03  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Minor cleanup, release RC3.

2004-03-02  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixes for 2773 (handling of image buttons) and 2779 (xml import problems)

2003-01-30  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Minor cleanup, release RC2.

2004-01-16  Jim Roepcke <jim@roepcke.com> (jimroepcke)

   * Remove acquisition wrappers from keys and values before putting them in
     the action and validator containers.

2003-12-19  Geoff Davis <geoff@geoffdavis.net> (plonista)
