@@ -13,7 +13,7 @@
 ##########################################################################
 """ Zope object encapsulating a controlled page templates that comes from the filesystem.
 
-$Id: ControllerPageTemplateFile.py,v 1.6 2004/07/01 18:17:12 plonista Exp $
+$Id: ControllerPageTemplateFile.py,v 1.7 2004/07/11 01:26:41 plonista Exp $
 """
 
 import os
@@ -59,9 +59,19 @@ class ControllerPageTemplateFile(BaseClass, BaseControllerPageTemplate, FSContro
             raise
 
 
+    def _updateFromFS(self):
+        # workaround for Python 2.1 multiple inheritance lameness
+        return self._baseUpdateFromFS()
+
+    
+    def _readMetadata(self):
+        # workaround for Python 2.1 multiple inheritance lameness
+        return self._baseReadMetadata()
+
+        
     def _readFile(self, reparse):
         BaseClass._readFile(self, reparse)
-        FSControllerBase._readMetadata(self)
+        self._readMetadata()
 
 
     security.declarePrivate('manage_afterAdd')
