@@ -1,3 +1,9 @@
+2004-07-10  Geoff Davis <geoff@geoffdavis.net> (plonista)
+
+   * Made previous fixes play nicely with Python 2.1
+   
+   * Got rid of some code in manage_afterAdd that caused problems during site imports
+
 2004-06-15  Geoff Davis <geoff@geoffdavis.net> (plonista)
 
    * Modified filesystem objects so that they check for updates to .metadata
